syntax = "proto3";

package blog;

option go_package = "blogpb";

message Blog {
    string id = 1;
    string author_id = 2;
    string title = 3;
    string content = 4;
}

message CreateBlogRequest {
    Blog blog = 1;
}

message CreateBlogResponse {
    Blog blog = 1; //Will have a blog id
}

message ReadBlogRequest {
    string blog_id = 1;
}

message ReadBlogResponse {
    Blog blog = 1; //Will have a blog id
}

message UpdateBlogRequest {
    Blog blog = 1;
}

message UpdateBlogResponse {
    Blog blog = 1; //Will have a blog id
}

message DeleteBlogRequest {
    string blog_id = 1;
}

message DeleteBlogResponse {
    bool result = 1; //Will have a true if blog has been deleted
}

message ListBlogRequest {}

message ListBlogResponse {
    Blog blog = 1;
}

service BlogService {
    rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse);
    rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse); // return NOT_FOUND if message not found
    rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse);
    rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse);
    rpc ListBlog(ListBlogRequest) returns (stream ListBlogResponse);
}